--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 mEAT - mein Einkaufs-Abrechnngs-Tool
 
-This tool should work similiar to a housholding book. You can see all your outgoings and debts to other people.
-But you enter every bill with all its items and then add people to this items. So you can make an accounting between many people.
+This tool should work similiar to a householding book. You can see all your outgoings and debts to other people. 
+But you enter every bill after a shopping tour with all its items and then add people to this items. So you can make an accounting between many people.
 
 My first specification is written in german and could be translated but right now i don't see the need of this.
 
